--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,9 +47,34 @@ table {
   border-spacing: 0;
 }
 
+@font-face {
+    font-family: 'KnewaveRegular';
+    src: url('../fonts/knewave-webfont.eot');
+    src: url('../fonts/knewave-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/knewave-webfont.woff') format('woff'),
+         url('../fonts/knewave-webfont.ttf') format('truetype'),
+         url('../fonts/knewave-webfont.svg#KnewaveRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'KnewaveOutlineRegular';
+    src: url('../fonts/knewave-outline-webfont.eot');
+    src: url('../fonts/knewave-outline-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/knewave-outline-webfont.woff') format('woff'),
+         url('../fonts/knewave-outline-webfont.ttf') format('truetype'),
+         url('../fonts/knewave-outline-webfont.svg#KnewaveOutlineRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 /* main */
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "KnewaveRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: auto;
   position: relative;
 }
@@ -76,4 +101,5 @@ h1 {
 
 .pie-label {
   font-size: 22px;
+  font-family: "KnewaveOutlineRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
